<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.activitys.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_ingrese_codigo"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_ingrese_descripcion" />

        <EditText
            android:id="@+id/edit_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_ingrese_precio"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_alta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="alta"
                android:text="@string/btn_alta" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_baja_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="bajaXcodigo"
                android:text="@string/btn_baja_codigo" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="listar"
            android:text="@string/btn_listar" />
    </LinearLayout>

</ScrollView>