<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		<!-- Articulo:       ________________ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
             android:layout_marginLeft="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_articulo"
                android:textColor="@android:color/holo_blue_light"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/art_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
		<!-- Codigo:       ________________ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
             android:layout_marginLeft="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_codigo"
                android:textColor="@android:color/holo_blue_light"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/art_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
		<!-- Precio:       ________________ -->	
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
             android:layout_marginLeft="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_precio"
                android:textColor="@android:color/holo_blue_light"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/art_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

</LinearLayout>